# uimd

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOM_UI_PLAN.md  LICENSE  README.md  SECURITY.md  UI_RULES.md  pyproject.toml  uimd
cpp/: CMakeLists.txt
cpp/cmake/: uimdConfig.cmake.in
cpp/dialogs/: file_browser.cpp  file_browser.hpp  file_browser.uimd  file_browser_ui.cpp  file_browser_ui.hpp  file_browser_ui.py  message_box.cpp  message_box.hpp  message_box_ok_cancel_ui.cpp  message_box_ok_cancel_ui.hpp  message_box_ok_ui.cpp  message_box_ok_ui.hpp  message_box_yes_no.uimd  message_box_yes_no_cancel_ui.cpp  message_box_yes_no_cancel_ui.hpp  message_box_yes_no_ui.cpp  message_box_yes_no_ui.hpp
cpp/examples/activity_feed/: activity_feed.cpp  activity_feed.py  activity_feed.uimd  activity_feed_ui.cpp  activity_feed_ui.hpp  activity_feed_ui.py
cpp/examples/activity_feed/activity_feed_panel/: activity_feed_panel.cpp  activity_feed_panel.hpp  activity_feed_panel.py  activity_feed_panel_ui.cpp  activity_feed_panel_ui.hpp  activity_feed_panel_ui.py
cpp/examples/activity_feed/activity_item/: activity_item.cpp  activity_item.hpp  activity_item.py  activity_item_ui.cpp  activity_item_ui.hpp  activity_item_ui.py
cpp/examples/activity_feed/settings/: settings.cpp  settings.hpp  settings.py  settings.uimd  settings_ui.cpp  settings_ui.hpp  settings_ui.py
cpp/examples/calculator/: calculator.cpp  calculator.py  calculator.uimd  calculator_ui.cpp  calculator_ui.hpp  calculator_ui.py
cpp/examples/cells/: cells.cpp  cells.py  cells.uimd  cells_ui.cpp  cells_ui.hpp  cells_ui.py
cpp/examples/contacts_manager/: contacts_manager.cpp  contacts_manager.py  contacts_manager_ui.cpp  contacts_manager_ui.hpp  contacts_manager_ui.py
cpp/examples/contacts_manager/contact_form/: contact_form.cpp  contact_form.hpp  contact_form.py  contact_form_ui.cpp  contact_form_ui.hpp  contact_form_ui.py
cpp/examples/contacts_manager/data/: contacts.csv
cpp/examples/expense_tracker/: categories_view_ui.cpp  categories_view_ui.hpp  categories_view_ui.py  expense_tracker.cpp  expense_tracker.py  expense_tracker_ui.cpp  expense_tracker_ui.hpp  expense_tracker_ui.py  expenses_view.py  expenses_view_ui.cpp  expenses_view_ui.hpp  expenses_view_ui.py  settings_view.uimd  settings_view_ui.cpp  settings_view_ui.hpp  settings_view_ui.py
cpp/examples/expense_tracker/expense_row/: expense_row.py  expense_row_ui.cpp  expense_row_ui.hpp  expense_row_ui.py
cpp/examples/expense_tracker/expenses_list/: expenses_list.cpp  expenses_list.hpp  expenses_list.py  expenses_list_ui.cpp  expenses_list_ui.hpp  expenses_list_ui.py
cpp/examples/formular/: formular.cpp  formular.py  formular.uimd  formular_ui.cpp  formular_ui.hpp  formular_ui.py
cpp/examples/image_browser/: gallery_item_ui.cpp  gallery_item_ui.hpp  gallery_mosaic_ui.cpp  gallery_mosaic_ui.hpp  gallery_scroll.uimd  gallery_scroll_ui.cpp  gallery_scroll_ui.hpp  gallery_view.uimd  gallery_view_ui.cpp  gallery_view_ui.hpp  image_browser.cpp  image_browser.uimd  image_browser_ui.cpp  image_browser_ui.hpp  image_button.uimd  image_button_ui.cpp  image_button_ui.hpp  image_list_button.uimd  image_list_button_ui.cpp  image_list_button_ui.hpp  image_list_item.uimd  image_list_item_ui.cpp  image_list_item_ui.hpp  image_list_scroll_ui.cpp  image_list_scroll_ui.hpp  image_list_view_ui.cpp  image_list_view_ui.hpp  image_show_dialog_ui.cpp  image_show_dialog_ui.hpp  image_view_ui.cpp  image_view_ui.hpp
cpp/examples/image_gallery/: image_gallery.cpp  image_gallery.py  image_gallery.uimd  image_gallery_ui.cpp  image_gallery_ui.hpp  image_gallery_ui.py
cpp/examples/markdown_viewer/: markdown_viewer.cpp  markdown_viewer.py  markdown_viewer.uimd  markdown_viewer_ui.cpp  markdown_viewer_ui.hpp  markdown_viewer_ui.py
cpp/examples/markdown_viewer/blocks/: code_block.cpp  code_block.hpp  code_block.py  code_block.uimd  code_block_ui.cpp  code_block_ui.hpp  code_block_ui.py  heading.cpp  heading.hpp  heading.py  heading.uimd  heading_ui.cpp  heading_ui.hpp  heading_ui.py  paragraph.cpp  paragraph.hpp  paragraph.py  paragraph.uimd  paragraph_ui.cpp  paragraph_ui.hpp  paragraph_ui.py  table_block.cpp  table_block.hpp  table_block.py  table_block.uimd  table_block_ui.cpp  table_block_ui.hpp  table_block_ui.py
cpp/examples/markdown_viewer/docs/: styles.markdown
cpp/examples/markdown_viewer/document_view/: document_view.cpp  document_view.hpp  document_view.py  document_view_ui.cpp  document_view_ui.hpp  document_view_ui.py
cpp/examples/special_elements/: special_elements.cpp  special_elements.py  special_elements.uimd  special_elements_ui.cpp  special_elements_ui.hpp  special_elements_ui.py
cpp/examples/task_board/: task_board.cpp  task_board.py  task_board_ui.cpp  task_board_ui.hpp  task_board_ui.py
cpp/examples/task_board/task_dialog/: task_dialog.cpp  task_dialog.hpp  task_dialog.py  task_dialog_ui.cpp  task_dialog_ui.hpp  task_dialog_ui.py
cpp/examples/task_board/task_list/: task_list.cpp  task_list.hpp  task_list.py  task_list_ui.cpp  (+2 more)
cpp/examples/text_editor/: text_editor.cpp  text_editor.py  text_editor.uimd  text_editor_ui.cpp  text_editor_ui.hpp  text_editor_ui.py
cpp/examples/widget_gallery/: widget_gallery.cpp  widget_gallery.py  widget_gallery_ui.cpp  widget_gallery_ui.hpp  widget_gallery_ui.py
cpp/src/app/: Application.cpp  Window.cpp
cpp/src/core/: Color.cpp  Element.cpp  Layout.cpp  Style.cpp  TextVisual.cpp  Version.cpp
cpp/src/elements/: BasicElements.cpp  FrameBufferView.cpp  Image.cpp  InfoLabel.cpp  MessageTable.cpp  ReusableElement.cpp  ScrollView.cpp
cpp/src/terminal/: Clipboard.cpp  Input.cpp  TerminalBackend.cpp  TerminalBuffer.cpp
cpp/tests/: test_dialogs.cpp  test_runtime_skeleton.cpp
cpp/tools/mcp_tester/: log_panel_ui.cpp  log_panel_ui.hpp  main.cpp  mcp_tester_ui.cpp  mcp_tester_ui.hpp
cpp/tools/uimd/: NativeCppGenerator.cpp  NativeCppGenerator.hpp  NativeGrid.cpp  NativeGrid.hpp  NativeModel.cpp  NativeModel.hpp  NativePythonGenerator.cpp  NativePythonGenerator.hpp  main.cpp
cpp/tools/uimd_init/: main.cpp
(+284 files in other folders)
